# memlp_test

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  memlp_test.cpp
include/: FuncLearnTest.hpp  UnitTest.hpp  easylogging++.h  microunit.h
test/: DatasetTest.cpp  FuncLearnTest.cpp  IrisDatasetTest.cpp  LayerTest.cpp  LossTest.cpp  MLPTest.cpp  NodeTest.cpp  SerialiseTest.cpp  _TestMain.cpp
